// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pems Response with keys for pems 1`] = `
Object {
  "kid-A": Object {
    "issuer": "https://cognito-idp.exampleRegion.amazonaws.com/exampleUserPoolId",
    "key": "-----BEGIN PUBLIC KEY-----
MD0wDQYJKoZIhvcNAQEBBQADLAAwKQIiAJbI4YJbJI4YLJZI4IeN5Y+Yd+JZI4d+
JZI4bd3sWpqZXgIDAQAB
-----END PUBLIC KEY-----
",
  },
  "kid-B": Object {
    "issuer": "https://cognito-idp.exampleRegion.amazonaws.com/exampleUserPoolId",
    "key": "-----BEGIN PUBLIC KEY-----
MD0wDQYJKoZIhvcNAQEBBQADLAAwKQIiAJbI4YJbJI4YLJZI4IeN5Y+Yd+JZI4d+
JZI4bd3sWpqZXgIDAQAB
-----END PUBLIC KEY-----
",
  },
  "kid-C": Object {
    "issuer": "https://cognito-idp.exampleRegion.amazonaws.com/exampleUserPoolId",
    "key": "-----BEGIN PUBLIC KEY-----
MD0wDQYJKoZIhvcNAQEBBQADLAAwKQIiAJbI4YJbJI4YLJZI4IeN5Y+Yd+JZI4d+
JZI4bd3sWpqZXgIDAQAB
-----END PUBLIC KEY-----
",
  },
}
`;

exports[`Pems Response with keys for pems for all configuration regions 1`] = `
Object {
  "kid-A": Object {
    "issuer": "https://cognito-idp.exampleRegion1.amazonaws.com/exampleUserPoolId1",
    "key": "-----BEGIN PUBLIC KEY-----
MD0wDQYJKoZIhvcNAQEBBQADLAAwKQIiAJbI4YJbJI4YLJZI4IeN5Y+Yd+JZI4d+
JZI4bd3sWpqZXgIDAQAB
-----END PUBLIC KEY-----
",
  },
  "kid-C": Object {
    "issuer": "https://cognito-idp.exampleRegion2.amazonaws.com/exampleUserPoolId2",
    "key": "-----BEGIN PUBLIC KEY-----
MD0wDQYJKoZIhvcNAQEBBQADLAAwKQIiAJbI4YJbJI4YLJZI4IeN5Y+Yd+JZI4d+
JZI4bd3sWpqZXgIDAQAB
-----END PUBLIC KEY-----
",
  },
}
`;
